# lontra

./: .gitignore  CMakeLists.txt  EVOLUTION.md  README.md  TRACKING.md  benchmark.sh  run_match.sh
benchmark_results/: Stockfish_L0_output.txt  Stockfish_L0_results.pgn  Stockfish_L1_output.txt  Stockfish_L1_results.pgn  Stockfish_L2_output.txt  Stockfish_L2_results.pgn  elo.txt  summary.txt
include/: engine.hpp  uci.hpp
src/: engine.cpp  main.cpp  uci.cpp
